--- a/index.html
+++ b/index.html
@@ -1116,7 +1116,7 @@
             </div>
         </div>
 
-        <!-- Footer -->
+        <!-- Footer
         <footer class="footer">
             <p>PAVA CUP Football Viewer • Community Football League</p>
             <div class="pava-footer">PAVA</div>
@@ -1124,7 +1124,7 @@
             <p class="mt-2">Click on team names in standings to view their players</p>
         </footer>
     </div>
-
+ -->
     <!-- Match Detail Modal -->
     <div class="modal-overlay" id="match-modal">
         <div class="modal-content">
@@ -1988,4 +1988,5 @@ const manager = (team) => {
         window.addEventListener('DOMContentLoaded', init);
     </script>
 </body>
+
 </html>
